--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,11 +159,6 @@ input[type="submit"] {
    ========================================================================== */
 
 
-/* Index Wrap - background in case video doesn't load */
-/*#headerwrap {
-	background: url(../img/backgrounds/video-pic.jpg) no-repeat center top;
-}
-*/
 
 /* David changed from White to Ainc Gray */
 
